--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -349,6 +349,69 @@ nav .mobileMenu {
   opacity: 0.5;
 }
 
+/* COMMISSION INFO •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+.contactContent.showCommissionInfo .commissionInfo {
+  display: block;
+}
+.contactContent .commissionInfoToggle {
+  display: inline-block;
+  position: relative;
+  top: -0.35em;
+  width: 0.75rem;
+  aspect-ratio: 1/1;
+  background: url("../images/about/info.svg") center no-repeat;
+  background-size: contain;
+  transition: 0.25s ease;
+  cursor: pointer;
+}
+.contactContent .commissionInfoToggle:hover {
+  opacity: 0.5;
+}
+.contactContent .commissionInfo {
+  display: none;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  max-height: 100%;
+  padding: 2rem;
+  background: #161E2E;
+  z-index: 1;
+  overflow-y: scroll;
+}
+.contactContent .commissionInfo > * {
+  color: #677DA7;
+}
+.contactContent .commissionInfo h2 {
+  margin-bottom: 2rem;
+}
+.contactContent .commissionInfo h3 {
+  margin: 1rem auto;
+  font-size: 1rem;
+}
+.contactContent .commissionInfo h3::before {
+  content: "";
+  display: block;
+  position: relative;
+  margin: 1rem 0 2rem 0;
+  width: 100%;
+  height: 1px;
+  background: #677DA7;
+  opacity: 0.25;
+}
+.contactContent .commissionInfo p {
+  text-align: left;
+}
+.contactContent .commissionInfo .button {
+  background: rgba(103, 125, 167, 0.5019607843);
+  color: #7f94b9;
+  transition: 0.25s ease;
+  margin: 2rem auto 0 auto;
+}
+.contactContent .commissionInfo .button:hover {
+  opacity: 0.5;
+}
+
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 #homeContent {
   padding-top: 5rem;
