--- a/stylesheets/styles.scss
+++ b/stylesheets/styles.scss
@@ -304,6 +304,61 @@ nav {
     }
 }
 
+/* COMMISSION INFO •••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
+
+.contactContent {
+    &.showCommissionInfo .commissionInfo { display: block; }
+
+    .commissionInfoToggle {
+        display: inline-block;
+        position: relative;
+        top: -0.35em;
+        width: 0.75rem;
+        aspect-ratio: 1 / 1;
+        background: url("../images/about/info.svg") center no-repeat;
+        background-size: contain;
+        transition: 0.25s ease;
+        cursor: pointer;
+        &:hover { opacity: 0.5; }
+    }
+    .commissionInfo {
+        display: none;
+        position: absolute; 
+        top: 0;
+        left: 0;
+        width: 100%;
+        max-height: 100%; 
+        padding: $pageMargin;
+        background: $medBlue;
+        z-index: 1;
+        overflow-y: scroll;
+        > * { color: $lightBlue; }
+        h2 { margin-bottom: 2rem; }
+        h3 { 
+            margin: 1rem auto; 
+            font-size: 1rem; 
+            &::before {
+                content: "";
+                display: block;
+                position: relative;
+                margin: 1rem 0 2rem 0; 
+                width: 100%;
+                height: 1px;
+                background: $lightBlue;
+                opacity: 0.25;
+            }
+        }
+        p { text-align: left; }
+        .button {
+            background: $lightBlue50;
+            color: $veryLightBlue;
+            transition: 0.25s ease;
+            margin: $pageMargin auto 0 auto;
+            &:hover { opacity: 0.5; }
+        }
+    }
+}
+
 /* HOMEPAGE ••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••••*/
 
 #homeContent {
